--- a/wdk7-samples/toaster/wdm/toaster.htm
+++ b/wdk7-samples/toaster/wdm/toaster.htm
@@ -1637,8 +1637,12 @@ package in the en-us folder. </span></p>
 mso-fareast-font-family:"Times New Roman"'>Installation</span><span
 style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></h3>
 
-<p><span style='font-size:10.0pt;line-height:115%;font-family:"Verdana","sans-serif"'>First
-install the bus driver. To install the bus driver on Windows 2000: </span></p>
+<p><span style='font-size:11.0pt;line-height:115%;font-family:"Verdana","sans-serif"'>
+First, we should install the <u>bus driver</u>. </span></p>
+
+<p><span style='font-size:10.0pt;line-height:115%;font-family:"Verdana","sans-serif"'>
+To install the bus driver on Windows 2000: </span></p>
+
 
 <p class=MsoNormal><span style='font-size:10.0pt;line-height:115%;font-family:
 "Verdana","sans-serif"'>1.</span><span style='font-size:7.0pt;line-height:115%;
