--- a/wdk7-samples/toaster/wdm/toaster.htm
+++ b/wdk7-samples/toaster/wdm/toaster.htm
@@ -1897,7 +1897,7 @@ plug in a device (or rather simulate a device arrival): </span></b></p>
 -p 1 </span></p>
 
 <p class=MsoNormal><b><span style='font-size:10.0pt;line-height:115%;
-font-family:"Verdana","sans-serif"'>To unplug a device: </span></b></p>
+font-family:"Verdana","sans-serif"'>To unplug a device (cause IRP_MN_SURPRISE_REMOVAL): </span></b></p>
 
 <p class=MsoNormal><span style='font-size:10.0pt;line-height:115%;font-family:
 "Verdana","sans-serif"'>C:\&gt;enum -u 1 </span></p>
